// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomButton Component renders correctly with default props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "blue",
      "borderRadius": 12,
      "height": 72,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
        "gap": 15,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "gray",
            "fontFamily": "Lato-Bold",
            "fontSize": 29,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Click Me
    </Text>
  </View>
</View>
`;

exports[`CustomButton Component renders loading state correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "blue",
      "borderRadius": 12,
      "height": 72,
      "justifyContent": "center",
      "opacity": 0.5,
      "width": "100%",
    }
  }
>
  <ActivityIndicator
    color="gray"
  />
</View>
`;
